<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">불주먹</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">166486639719</string>

    <!--
        스플래시
    -->
    <string name="title_activity_splash">SplashActivity</string>
    <string name="connecting">Google+ 에 연결 중입니다.</string>
    <string name="just_go">불주먹 하러가기</string>
    <string name="could_not_signin_google_plus">Google+로 로그인하지 못했습니다.</string>
    <string name="signin_other_error">Google Play Game 로그인 중 에러가 발생하였습니다. 나중에 다시 시도해 주세요. </string>
    <!--
        메인
    -->
    <string name="new_best_score">새로운 최고점수 달성!</string>
    <string name="firefist_power">불주먹 세기</string>
    <string name="cracking_building">건물 부수기</string>
    <string name="firefist_pvp">불주먹 PVP</string>
    <string name="another_mode">다른 모드</string>
    <!--
        프로필
    -->
    <string name="profile">프로필</string>
    <string name="title_activity_profile">Google+ 프로필</string>
    <string name="logout">로그아웃</string>
    <string name="player_name">이름</string>
    <string name="player_name_default">수련생</string>
    <string name="level">등급</string>
    <string name="level_1">물주먹</string>
    <string name="level_2">바람주먹</string>
    <string name="level_3">불주먹</string>
    <string name="level_4">핵주먹</string>
    <string name="score">점수</string>
    <string name="score_unit">N</string>
    <string name="exp">경험치</string>
    <string name="exp_unit">xp</string>
    <string name="coin">코인</string>
    <string name="coin_unit"> 코인</string>
    <string name="camul_score">누적점수</string>
    <string name="best_score">최고점수</string>
    <!--
        건물 부수기
    -->
    <string name="title_activity_cracking">건물 부수기</string>
    <string name="near_building">근처 건물</string>
    <string name="finding">찾는 중...</string>
    <string name="my_damage">입힌 피해량</string>
    <string name="ranking">순위</string>
    <string name="none">없음</string>
    <string name="gps">GPS</string>
    <string name="not_found_sensors">점수 측정에 필요한 센서들이 없습니다.</string>
    <string name="not_authorized">사용자 인증이 되지 않았습니다. 로그인해 주세요.</string>
    <string name="could_not_send_data_to_server">서버에 데이터를 전송하지 못했습니다.</string>
    <string name="could_not_get_id_for_cracking">사용자 ID가 얻어지지 않아 건물을 공격할 수 없습니다.</string>
    <string name="gps_is_disabled">GPS 기능이 비활성화되어 있습니다.</string>
    <string name="destroy_building">건물이 파괴되었습니다!</string>
    <string name="not_authorized_so_you_are_anonymous">계정이 인증되어 있지 않아 anonymous라는 이름으로 활동하시게 됩니다.</string>

    <string name="format_score">%.2f N</string>
    <string name="format_rank">%d 위</string>
    <!--
        리더보드 ID
    -->
    <string name="leaderboard_best_score">CgkI54iCm-wEEAIQAQ</string>
    <string name="leaderboard_camulated_score">CgkI54iCm-wEEAIQAg</string>
    <string name="leaderboard_experience">CgkI54iCm-wEEAIQAw</string>
    <string name="leaderboard_coins">CgkI54iCm-wEEAIQBA</string>


</resources>
