<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="unipi.kr.firefist.CrackingActivity">

    <TextView
        android:id="@+id/near_building"
        android:text="@string/near_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="10pt"
        android:textColor="@color/firefist_orange"
        />
    <TextView
        android:id="@+id/text_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="10pt"
        android:text="@string/finding"

        android:layout_toRightOf="@id/near_building"
        android:layout_marginLeft="15dp"
        />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/image_building"
        android:layout_below="@id/near_building"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/firefist_mobile_profile"
        />

    <LinearLayout
        android:id="@+id/layout_damage_rate"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/image_building"
        android:layout_marginTop="10dp"
        >

        <SurfaceView
            android:id="@+id/surface_damage_rate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/text_damage_rate"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="10pt"
            android:textColor="@color/firefist_orange"
            android:text="0%"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_damage_rate"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/my_damage"
                android:textSize="18sp"
                android:textColor="@color/firefist_darker_gray"/>

            <TextView
                android:id="@+id/text_my_damage_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#000000"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ranking"
                android:textSize="18sp"
                android:textColor="@color/firefist_darker_gray"
                />

            <TextView
                android:id="@+id/text_my_ranking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#000000"
                />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
